Bug 425926 - Double right click events are not properly reported
Summary: Double right click events are not properly reported
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: emulation (other bugs)
Version First Reported In: 20.08.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-28 23:31 UTC by magiblot
Modified: 2021-06-07 18:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.08
Sentry Crash Report:


Attachments
Screen recording of the issue. (71.85 KB, video/mp4)
2020-08-28 23:31 UTC, magiblot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description magiblot 2020-08-28 23:31:44 UTC
Created attachment 131255 [details]
Screen recording of the issue.

SUMMARY

When double clicking with the right button, the sequences sent to the application in the terminal are DOWN-UP-UP instead of DOWN-UP-DOWN-UP. This is not an issue with the other buttons.

See the attached video, which shows double clicks for different buttons, in the following order:
1) left button
2) right button
3) middle button

Thank you.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Kernel Version: 5.8.4-arch1-1
OS Type: 64-bit
Comment 1 tcanabrava 2021-06-07 18:04:33 UTC
Git commit 7cbbb07fb14ad018cba162d7051f5b2066e73a01 by Tomaz  Canabrava, on behalf of Luis Javier Merino Morán.
Committed on 07/06/2021 at 18:03.
Pushed by tcanabrava into branch 'master'.

Do not swallow right button presses on double-click

As explained by magiblot at the bug below, "When double clicking with
the right button, the sequences sent to the application in the terminal
are DOWN-UP-UP instead of DOWN-UP-DOWN-UP."

M  +6    -5    src/terminalDisplay/TerminalDisplay.cpp

https://invent.kde.org/utilities/konsole/commit/7cbbb07fb14ad018cba162d7051f5b2066e73a01