Do not swallow right button presses on double-click

As explained by magiblot at the bug below, "When double clicking with
the right button, the sequences sent to the application in the terminal
are DOWN-UP-UP instead of DOWN-UP-DOWN-UP."

BUG: 425926